2012-07-12 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* ZipperDocument.m
	  Add Action methods to (de)selectAll:
	* Resources/ZipperDocument.gorm
	  Allow Empty selection
	* Resources/MainMenu.gorm
	  add Edit submenu with entries to (de)select All

2012-04-21 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.m
	send perform close and trap close and stop modal
	(on Macintosh otherwise the close button would not stop modal)

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.[h,m]
	Set textfields to empty string if the value is nil.

	* ZipperDocument.m
	Define sel_isEqual replacement for old Mac runtimes.

	* FileInfo.m
	Append file name to path by using the appropriate method.

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Swap order of arguments and skip empty arguments which confuse
	BSD tar.

	* FileInfo.m
	Fix unreliable parsing of paths (filename contained in folders).

2012-02-29 Riccardo Mottola <rm@gnu.org>

	* ZipperCell.[h,m]
	Do not use private drawAttributedText. Add boilerplate.

2012-02-25 Riccardo Mottola <rm@gnu.org>

	* Archive.[h,m]
	* Preferences.[h,m]
	* TableViewDataSource.[h,m]
	* ZipperDocument.m
	Remove ASSIGN macro, add boiler plate

2012-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* NSObject+Custom.[m|h]
	  make the return not volatile of method methodIsAbstract:

2012-02-23 Riccardo Mottola <rm@gnu.org>

	* TableViewDataSource.m
	* ZipperDocument.m
	Move table delegate method to ZipperDocument, now the
	real table delegate.

2012-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* TableViewDataSource.m, get rid of unused variable

2012-02-23 Riccardo Mottola <rm@gnu.org>

	* ZipperCell.m
	Remove access to private class variables

	* PreferencesController.m
	Do not create a modal session and let NSApp manage it.

2012-02-22 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* PreferencesController.m Add -dealloc method